--- a/index.qmd
+++ b/index.qmd
@@ -62,13 +62,13 @@ format:
 
 <p class="hero-banner-date">
 
-06.08.2025
+13.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Экспорт Urals близок к пику 2025 г.
+Российский экспорт чувствует себя комфортно
 
 </p>
 :::
@@ -82,13 +82,13 @@ format:
 
 <p class="hero-banner-date">
 
-06.08.2025
+13.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Демпфер по дизелю держит тренд на рост 3-ий месяц подряд
+Росту цен нет предела
 
 </p>
 :::
@@ -102,13 +102,13 @@ format:
 
 <p class="hero-banner-date">
 
-01.07.2025
+01.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Газ спасает от жары
+Газ спрятался за нефтью
 
 </p>
 :::
@@ -122,13 +122,14 @@ format:
 
 <p class="hero-banner-date">
 
-11.08.2025
+18.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Юго-Восточная Азия поднимает цены
+Цены на уголь оживили рынок
+
 
 </p>
 :::
@@ -142,13 +143,13 @@ format:
 
 <p class="hero-banner-date">
 
-11.08.2025
+18.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Индия несёт премию на мировой рынок карбамида
+Китай выходит из тени внутреннего рынка
 
 </p>
 :::
@@ -182,13 +183,13 @@ format:
 
 <p class="hero-banner-date">
 
-08.08.2025
+15.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Нефтехимия нащупала дно, или оттуда ещё постучат?
+Слабый спрос медленно душит цены
 
 </p>
 :::
@@ -202,13 +203,13 @@ format:
 
 <p class="hero-banner-date">
 
-11.08.2025
+18.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Экспортные пошлины на зерновые на нуле
+Зерновые площади в минусе
 
 </p>
 :::
@@ -242,13 +243,13 @@ format:
 
 <p class="hero-banner-date">
 
-15.07.2025
+15.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Контейнерный рынок ускорил падение и в объёмах, и в ставках
+Ставки на перевозку контейнеров из Китая прошли ценовое дно
 
 </p>
 :::
@@ -302,13 +303,13 @@ format:
 
 <p class="hero-banner-date">
 
-05.08.2025
+12.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Американские горки для экспорта
+Ставки фрахта перешли в режим драйв
 
 </p>
 :::
@@ -322,13 +323,13 @@ format:
 
 <p class="hero-banner-date">
 
-05.08.2025
+12.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Российский рынок наращивает экспорт в новых условиях
+Слабый экспорт и мировой рынок уронили ставки
 
 </p>
 :::
@@ -342,13 +343,13 @@ format:
 
 <p class="hero-banner-date">
 
-05.08.2025
+12.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Судовладельцы усиливают позиции в Черном море
+Фрахт с Азовского моря становится привилегией
 
 </p>
 :::
@@ -362,13 +363,13 @@ format:
 
 <p class="hero-banner-date">
 
-05.08.2025
+12.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Ставки фрахта обнулили рост предыдущей недели
+Восточный обновляет рекорд
 
 </p>
 :::
@@ -382,13 +383,13 @@ format:
 
 <p class="hero-banner-date">
 
-17.02.2025
+15.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Рекордные объёмы импорта толкают вверх ставки перевалки контейнеров на Дальнем Востоке
+Увеличение ставок перевалки: порты Юга и Балтики в авангарде изменений
 
 </p>
 :::
@@ -402,13 +403,13 @@ format:
 
 <p class="hero-banner-date">
 
-01.02.2025
+01.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Новый календарный год не принес изменений тарифов
+Низкий экспорт сохранил ставки перевалки
 
 </p>
 :::
@@ -422,13 +423,13 @@ format:
 
 <p class="hero-banner-date">
 
-31.01.2025
+24.07.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Морской экспорт угля остался ниже уровня предыдущего года
+Падение мирового угольного рынка снизило тарифы в портах
 
 </p>
 :::
@@ -442,13 +443,13 @@ format:
 
 <p class="hero-banner-date">
 
-30.01.2025
+08.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Тарифы на перевалку растут вслед за экспортными объемами
+Тарифы на перевалку не спешат расти
 
 </p>
 :::
@@ -462,13 +463,13 @@ format:
 
 <p class="hero-banner-date">
 
-16.02.2025
+08.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Ставки перевалки нефтепродуктов выросли вопреки снижению экспорта
+Падение экспорта в Черном море тянет ставки перевалки за собой
 
 </p>
 :::
@@ -481,6 +482,11 @@ format:
 :::
 
 ::: g-col-6
+
+13 августа 2025. ЦЦИ подготовил новый аналитический материал – **карту Масложирового комплекса России** в 2024-2025 г. (подсолнечник).
+
+[Карта](markets/markets-oilseed.qmd)
+
 6 августа 2025. Сырьевой индекс ЦЦИ. **Сырьевые цены оттолкнулись от дна**
 
 [Мониторинг июль -\>](reports/2025-07%20Сырьевой%20индекс%20ЦЦИ.pdf)
@@ -497,12 +503,13 @@ format:
 
 [Материалы →](events/2025-06-06-agro.qmd)
 
-4 июня 2025. Сырьевой индекс ЦЦИ. **Снижение тарифов не добавило ценам оптимизма**
-
-[Мониторинг май -\>](reports/2025-05%20Сырьевой%20индекс%20ЦЦИ.pdf)
 :::
 
 ::: g-col-6
+4 июня 2025. Сырьевой индекс ЦЦИ. **Снижение тарифов не добавило ценам оптимизма**
+
+[Мониторинг май -\>](reports/2025-05%20Сырьевой%20индекс%20ЦЦИ.pdf)
+
 15 апреля 2025. **ЦЦИ начал публиковать индексы на хопперы-зерновозы**
 
 [Пресс-релиз →](events/2025-04-15-railways-wheat-van.qmd)
@@ -519,9 +526,6 @@ format:
 
 [Пресс-релиз →](events/2025-02-05-realty.qmd)
 
-30 января 2025. **Налоговая цена на нефть в макроконсенсусе ЦЦИ**
-
-[Пресс-релиз →](events/2025-01-30-Macro-consensus.qmd)
 :::
 
 ::: g-col-12
