--- a/markets/freight-coal.qmd
+++ b/markets/freight-coal.qmd
@@ -17,6 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*12.08.2025 Морская логистика. Уголь*
+
+**Восточный обновляет рекорд**
+
+На прошлой неделе российские ставки фрахта для балкеров Panamax лишь незначительно скорректировались вверх на 0,1-0,2 долл./т на маршрутах в Индию.
+
+Недельные отгрузки угля из порта Восточный выросли до максимума с конца апреля 2025 г., но общие поставки из Дальневосточного региона снизились на 5% н/н.
+
+Итоги июля: морской экспорт российского угля в июле вырос на 5% м/м и на 7% в годовом исчислении. Фрахт отреагировал на рост экспорта и подорожал в среднем на 2-10% м/м в зависимости от направления и типоразмеров судов.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *05.08.2025 Морская логистика. Уголь*
 
 **Ставки фрахта обнулили рост предыдущей недели**
