--- a/markets/freight-crude.qmd
+++ b/markets/freight-crude.qmd
@@ -17,6 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*12.08.2025 Морская логистика. Нефть*
+
+**Ставки фрахта перешли в режим драйв**
+
+Cнижение доступного несанкционного флота привело к росту стоимости транспортировки российской нефти. 
+
+Стоимость перевозки судами класса Aframax выросла в диапазоне 0,4-0,7 долл./барр. в зависимости от направления.
+
+Несмотря на падение отгрузок из российских портов на 7% н/н, экспортные объемы остаются на высоком уровне.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *05.08.2025 Морская логистика. Нефть*
 
 **Американские горки для экспорта**
@@ -46,16 +58,6 @@ format:
 18 июля Европейский союз ввел ограничения против 64 танкеров, ранее перевозивших российскую нефть. Расширение геополитических препятствий не успело отразиться на фрахте – на минувшей неделе ставки на перевозку российской нефти оставались стабильными. Основные колебания в пределах 1% н/н затронули маршруты из Новороссийска.
 
 За 14-20 июля морской экспорт российской нефти вырос на 15% н/н до 478 тыс. т/сут., достигнув максимума с середины мая.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*15.07.2025 Морская логистика. Нефть*
-
-**Экспорт из Усть-Луги обновил рекорд 2025 г.**
-
-Стоимость транспортировки российской нефти из портов Балтики снизилась на 0,2-0,3 долл./барр. н/н, из портов Черного моря варьировалась в диапазоне от -0,1 долл./барр. до +0,3 долл./барр. н/н.
-
-Экспорт российской нефти вырос на 5,2% н/н.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
