--- a/markets/markets-aromatics.qmd
+++ b/markets/markets-aromatics.qmd
@@ -14,6 +14,14 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-12 .g-col-md-12 .g-col-lg-12}
 ### Котировки
 
+*15.08.2025 Ароматика*
+
+**Слабый спрос медленно душит цены**
+
+На рынке бензола ощущается профицит, несмотря на разгар регламентных ремонтов у производителей и период сезонного спроса.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *08.08.2025 Ароматика*
 
 **Нефтехимия нащупала дно, или оттуда ещё постучат?**
@@ -43,14 +51,6 @@ format:
 **Бросит ли экспортная альтернатива спасательный круг?**
 
 Производители капролактама продавливают снижение цен на бензол.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*11.07.2025 Ароматика*
-
-**Бензол и стирол углубляют фарватер снижения цен**
-
-На рынке бензола увеличивается навес предложения.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
