--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -17,6 +17,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*18.08.2025* Уголь
+
+**Цены на уголь оживили рынок**
+
+Сложности с вывозом продукции из угледобывающих провинций Китая в северные порты, инспекционные проверки, а также погодные условия поддержали спрос и цены на энергетический уголь на прошлой неделе. Стоимость пылеугольного топлива для металлургии также продолжила расти в странах Юго-Восточной Азии.
+
+![](../images/icon-locker.svg){width="6%"}
+[Подробнее](../demo-subscription.qmd)
+
+
 *11.08.2025* Уголь
 
 **Юго-Восточная Азия поднимает цены**
@@ -66,13 +76,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*30.06.2025* Уголь
-
-**Китайский спрос оживил рынок коксующегося угля**
-
-Правительство КНР заявило, что США снимут некоторые ограничения на торговлю с Китаем. В результате китайские промышленные предприятия начали активнее покупать коксующийся уголь, что вызвало повышение цен на 2-3 долл./т марки ГЖ.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 
 ### События
