--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -17,15 +17,21 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*18.08.2025 Минеральные удобрения*
+
+**Китай выходит из тени внутреннего рынка**
+
+По итогам тендера индийская IPL закупила 2,075 млн т карбамида из 2 млн т запрашиваемого объема.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *11.08.2025 Минеральные удобрения*
 
 **Индия несёт премию на мировой рынок карбамида**
 
-По итогам индийского тендера индекс цен CFR India вырос на 7%. 
+По итогам индийского тендера индекс цен CFR India вырос на 7%.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-
 
 *04.08.2025 Минеральные удобрения*
 
@@ -56,14 +62,6 @@ format:
 **Индия разогревает рынок удобрений**
 
 В рамках текущего индийского тендера минимальный уровень цен на карбамид на базисе CFR India вырос на 24%.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*07.07.2025 Минеральные удобрения*
-
-**Цены на карбамид охладились, надолго ли?**
-
-Египет и Иран начали продажи карбамида после возобновления производства.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
