--- a/markets/markets-gas.qmd
+++ b/markets/markets-gas.qmd
@@ -16,6 +16,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-4 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*08.2025 Газ*
+
+**Газ спрятался за нефтью**
+
+Напряженность на нефтяном рынке в связи с возможным отказом Индии от закупок из России не отразится на газовом рынке. В 2024 г. Россия экспортировала в Индию всего 2 партии СПГ суммарным объемом 70 тыс. т. Доля российского СПГ в импорте в Индии не превышает 1%.
+
+В сравнении с мировым нефтяным рынком ситуация в газовой отрасли остается стабильной из-за слабого спроса и отсутствия шоков.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *07.2025 Газ*
 
 **Газ спасает от жары**
@@ -45,17 +55,6 @@ format:
 Спотовые и биржевые цены на газ в мире начали снижаться, но, учитывая начало межсезонья, котировки все еще держатся на достаточно высоком уровне.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*04.2025 Газ*
-
-**Весна и Трамп снижают цены на газ?**
-
-Энергоресурсы не попали под новые пошлины со стороны США.
-
-Окончание отопительного сезона и опасения кризиса в мировой экономике после ввода пошлин со стороны США привели к существенному падению цен на газ в мире в конце марта - начале апреля 2025 г.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
