--- a/markets/markets-oil-products.qmd
+++ b/markets/markets-oil-products.qmd
@@ -16,6 +16,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*13.08.2025 Бензин*
+
+**Росту цен нет предела**
+
+Несмотря на запрет экспорта автомобильного бензина, биржевые внутренние цены продолжили рост. Цены на АИ-92 и на АИ-95 выросли на 2 491 руб./т и 3 503 руб./т н/н соответственно.
+
+Удельный размер выплаты по топливному демпферу за июль по автомобильному бензину составил 9 260 руб./т, по дизельному топливу – 10 428 руб./т.
+
+Железнодорожный экспорт автомобильного бензина по результатам июля 2025 г. снизился на 10% м/м.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *06.08.2025 Дизель*
 
 **Демпфер по дизелю держит тренд на рост 3-ий месяц подряд**
@@ -35,19 +47,6 @@ format:
 В понедельник 28 июля Правительство РФ выпустило постановление о запрете на экспорт бензина до 31 августа. Рост биржевых цен из-за сезона высокого спроса и ухода крупных НПЗ на плановые ремонты стал главной причиной ввода новых ограничений на экспорт бензина. Экспорт бензина железнодорожным транспортом начал снижаться еще в июне во избежание усиления дефицита на внутреннем рынке.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*23.07.2025 Дизель*
-
-**Нефтепродукты из российского сырья теперь под запретом в ЕС**
-
-ЕС ввел запрет на импорт и брокерские услуги в отношении нефтепродуктов, изготовленных из российской нефти, и расширил список танкеров, которым запрещен вход в европейские порты.
-
-После введения новых ограничений объем экспорта российского дизеля, попадающего под ограничения, вырос на 35%.
-
-Вице-премьер А. В. Новак дал поручение ускорить погрузку топлива на ж/д цистерны, что приведет к росту отгрузок дизеля на внутренний рынок по итогам июля.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
