--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -16,6 +16,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*13.08.2025 Нефть*
+
+**Российский экспорт чувствует себя комфортно**
+
+Расширение дисконта на иранскую нефть обусловило увеличение дисконта на российский сорт ESPO на 0,3 долл./барр. н/н.
+
+Морские отгрузки российской нефти за отчетную неделю снизились на 34 тыс. т/сут. н/н. Несмотря на давление со стороны игроков международной арены на основных потребителей российского сырья, уровень поставок на внешние рынки остается на стабильном уровне.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *06.08.2025 Нефть*
 
 **Экспорт Urals близок к пику 2025 г.**
@@ -26,9 +36,7 @@ format:
 
 Расширение дисконта на иранскую нефть привело к увеличению дисконта на российскую нефть ESPO на 0,6 долл./барр. н/н.
 
-
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *30.07.2025 Нефть*
 
@@ -73,7 +81,6 @@ format:
 Морской экспорт российской нефти в Индию рухнул на 60% н/н и опустился до самых низких показателей 2025 г.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
