--- a/markets/markets-oilseed.qmd
+++ b/markets/markets-oilseed.qmd
@@ -23,9 +23,9 @@ format:
 
 Экспортные цены на подсолнечное масло за месяц выросли на 15 долл.
 
-Правительство РФ обнулило экспортные пошлины на подсолнечное масло и шрот до 31 августа 2025 г. 
+Правительство РФ обнулило экспортные пошлины на подсолнечное масло и шрот до 31 августа 2025 г.
 
-Президент Аргентины Хавьер Милей объявил о снижении экспортных пошлин на сою с 33% до 26%, на подсолнечник  - с 7,5% до 5,5%. 
+Президент Аргентины Хавьер Милей объявил о снижении экспортных пошлин на сою с 33% до 26%, на подсолнечник - с 7,5% до 5,5%.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -64,7 +64,6 @@ format:
 Индийские запасы растительных масел упали в начале апреля 2025 г. до минимума с конца 2021 г. – 1,7 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -103,6 +102,12 @@ hc
 ```
 
 [*Примечание: премия/дисконт рассчитывается как разница спотовой цены на пальмовое масло на Малайзийской бирже (BURSA Malaysia) и экспортного индекса подсолнечного масла ЦЦИ (Russian Sunflower Oil FOB Black Sea). Источник — ежемесячные отчеты ЦЦИ «Подсолнечное масло»*]{style="font-size:0.75em"}
+
+### Масложировой комплекс России в 2024-2025 гг. (подсолнечник)
+
+<a href="../pdf/%D0%A6%D0%A6%D0%98%20%D0%9A%D0%B0%D1%80%D1%82%D0%B0%20%D0%BC%D0%B0%D1%81%D0%BB%D0%BE%D0%B6%D0%B8%D1%80%D0%BE%D0%B2%D0%BE%D0%B3%D0%BE%20%D0%BA%D0%BE%D0%BC%D0%BF%D0%BB%D0%B5%D0%BA%D1%81%D0%B0%20%D0%A0%D0%A4%202024-2025%20%D0%B3%D0%B3..pdf" target="_blank"> <img src="../fig/maslo-map.png" alt="Карта масложирового комплекса" style="max-width:100%;"/> </a>
+
+Если найдете ошибки, пишите нам на электронную почту [office\@pbc-index.ru](mailto:office@pbc-index.ru).
 
 ### События
 
