--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -17,6 +17,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*15.08.2025*
+
+**Ставки на перевозку контейнеров из Китая прошли ценовое дно**
+
+-   Ставки на перевозку 40-футовых контейнеров из КНР в Россию прямыми контейнерными поездами выросли в среднем на 300 долл. за месяц: импортный контейнеропоток начинает восстанавливаться, фиксируется дефицит свободных мест для отправки контейнеров с ряда китайских станций.
+-   Дальневосточные терминалы снизили ставки на отправку контейнеров до Москвы в августе на 5-6%.
+-   На фоне локальных дефицитов контейнерного оборудования в Китае ставки пользования ими выросли впервые за последний год: до 0,9 тыс. долл. за аренду 40-футового контейнера на маршруте Шанхай – Москва.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *15.07.2025*
 
 **Контейнерный рынок ускорил падение и в объёмах, и в ставках**
@@ -28,7 +38,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-
 *16.06.2025*
 
 **Ставки на контейнерные поезда из КНР обновляют новые минимумы**
@@ -38,51 +47,28 @@ format:
 -   Среднесуточные лизинговые платежи за фитинговые платформы снижаются вместе с ценами российских вагоностроителей и ключевой ставкой Банка России, однако они остаются в 1,5-2 раза выше ставок аренды.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*15.05.2025*
-
-**Контейнерный рынок переходит в режим ожидания**
-
--   Ставки на мультимодальные сквозные сервисы по доставке контейнеров из Китая в Москву через порты Дальнего Востока снижаются на 15% к ценам апреля; ставки на прямые поезда из Китая в Москву впервые в 2025 г. перешли к сдержанному росту.
--   Российские экспортёры теряют скидки к железнодорожному фрахту при аренде контейнерного оборудования: субсидии за пользование 40-футовым контейнером на маршруте Москва порты КНР снизились в мае до 620 долл., на маршруте Новосибирск – порты КНР – до 490 долл.
--   Падение объёмов контейнерных перевозок, улучшение эксплуатационной обстановки на сети РЖД и рост производства фитинговых платформ привели к снижению ставок их аренды. Майские индикативы: 1,65 тыс. руб. без НДС за 40-футовую платформу, 2,7 тыс. руб. без НДС за 80-футовую платформу.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*15.04.2025*
-
-**Контейнерам не хватает китайских грузов**
-
--   Индексы цен на перевозку контейнеров со станций Китая в Москву в прямом железнодорожном сообщении теряют в начале апреля 250-400 долл. к ценам марта на фоне избытка провозных мощностей и недостаточного спроса со стороны импортёров.
--   Жёсткое лимитирование на отправки контейнеров в адрес Дальневосточного полигона привело к росту ставок на перевозки по маршруту Москва – Владивосток до более чем 350 тыс. руб. за 40-футовый контейнер.
--   Выпуск контейнеров в КНР в 2024 г. обновил исторический рекорд (8,1 млн ДФЭ), а цены на них перешли к коррекции: в апреле стоимость 20’DC у китайских производителей стартует от 2,2 тыс. долл., 40’HC – от 3,0 тыс. долл.
--   По итогам 1 кв. 2025 г. перевозки контейнеров по сети РЖД в экспортном сообщении превысили импортные перевозки.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*17.03.2025*
-
-**Март - для импортёров фарт**
-
--   За последний месяц ставки на прямые ускоренные контейнерные поезда из Китая в Россию упали более чем на четверть и обновили минимум последних трёх лет. Железнодорожный транспорт – не только самый быстрый, но и самый бюджетный способ доставки контейнеров из КНР: FOR Шанхай – FOR Москва (40’HC COC) = 4,8 тыс. долл.
--   Падение объёмов импорта корректирует вниз ставки выдачи контейнеров в Китае и снижает доплаты российским грузоотправителям при аренде контейнеров для экспортных перевозок. Субсидии за пользование 40-футовыми контейнерами на маршруте Иркутск – города КНР впервые за последние полгода сменились необходимостью платы владельцу тары.
--   Ставки аренды 80-фут. фитинговых платформ держатся на уровне 2,73 тыс. руб./ваг.-сут. без НДС.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Стоимость железнодорожной контейнерной перевозки
 
 ```{r,warning = FALSE, echo = FALSE, message = FALSE}
+
 library(highcharter)
 library(openxlsx)
 library(tidyr)
+
+# df <- read.xlsx(xlsxFile = '../xls/График на сайт - ЖД.xlsx', sheet = "Контейнеры", detectDates = TRUE, startRow = 1) 
+# names(df) <- c('dt', 'value')
+# df[,3] <- NULL
+# df$dt = as.Date(as.numeric(df$dt), origin = "1899-12-30")
+# df$value <- round(df$value, 1)
 
 df <- read.xlsx(xlsxFile = '../data/Исходные данные.xlsx', sheet = "Рынки", detectDates = TRUE)
 id = "Стоимость контейнерной перевозки Москва - Новосибирск, 40HC COC"
 df = df[df$Наименование.показателя == id,]
 df$Данные <- round(df$Данные,1)
+
 
 hc = highchart() %>% 
    hc_add_series(df, type = "line", hcaes(x = Дата, y = Данные), color = "#1A4AFC", 
