--- a/markets/markets-sea-coal-ports.qmd
+++ b/markets/markets-sea-coal-ports.qmd
@@ -17,33 +17,52 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
-*31.01.2025*
+*24.07.2025* 
 
-**Морской экспорт угля остался ниже уровня предыдущего года**
+**Падение мирового угольного рынка снизило тарифы в портах**
 
--   В начале 2025 г. российские порты понизили ставки перевалки в среднем на 19% по сравнению с декабрем 2024 г.
--   По итогам 2024 г. морской экспорт российского угля снизился на 13% г/г до 173,5 млн т.
--   В 2024 г. перевалка угля в южных портах упала почти в 2 раза до 15,5 млн т. Перевалка в портах Северо-Запада сократилась на 15% г/г.
--   В прошлом году объем перевалки в портах Дальнего Востока остался на уровне 2023 г.
+- В 1 пол. 2025 г. ставки перевалки угля упали во всех ключевых российских портах. К июню 2025 г. средневзвешенная ставка снизилась на 31% к уровню января.
+
+- За первые 6 мес. 2025 г. объем морского экспорта составил 96 млн т, что соответствует уровню 2024 г., но на 12% ниже аналогичного периода 2023 г.
+
+- Снижение экспортных цен способствовало перетоку угля из западных портов РФ в порты Дальнего Востока, что отразилось на объемах перевалки в основных бассейнах.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*05.08.2024*
+*31.01.2025* 
+
+**Морской экспорт угля остался ниже уровня предыдущего года**
+
+- В начале 2025 г. российские порты понизили ставки перевалки в среднем на 19% по сравнению с декабрем 2024 г.
+
+- По итогам 2024 г. морской экспорт российского угля снизился на 13% г/г до 173,5 млн т. 
+
+- В 2024 г. перевалка угля в южных портах упала почти в 2 раза до 15,5 млн т. Перевалка в портах Северо-Запада сократилась на 15% г/г. 
+
+- В прошлом году объем перевалки в портах Дальнего Востока остался на уровне 2023 г.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*05.08.2024* 
 
 **Угольный рынок под давлением**
 
--   Ставки на перевалку угля в Балтийском и Азово-Черноморском бассейнах снизились в целях увеличения объема перевалки.
--   Летний туристический сезон дополнительно ограничивает рост ж.-д. поставок угля в Азово-Черноморском бассейне, несмотря на снижение ставки перевалки угля в порту Тамань.
--   Ограничения пропускной возможности Восточного полигона сдерживают объемы поставок. Ванино - лидер по темпу роста ставок на Дальнем Востоке: 25% за полгода.
--   Ставки на перевалку угля в дальневосточных портах в среднем выросли на 4% по сравнению с февралем. Ж.-д. отгрузки угля на Дальнем Востоке на 58% превышают отгрузки в портах Балтики и на 88% в южных портах.
+- Ставки на перевалку угля в Балтийском и Азово-Черноморском бассейнах снизились в целях увеличения объема перевалки.
+
+- Летний туристический сезон дополнительно ограничивает рост ж.-д. поставок угля в Азово-Черноморском бассейне, несмотря на снижение ставки перевалки угля в порту Тамань. 
+
+- Ограничения пропускной возможности Восточного полигона сдерживают объемы поставок. Ванино - лидер по темпу роста ставок на Дальнем Востоке: 25% за полгода.
+
+- Ставки на перевалку угля в дальневосточных портах в среднем выросли на 4% по сравнению с февралем. Ж.-д. отгрузки угля на Дальнем Востоке на 58% превышают отгрузки в портах Балтики и на 88% в южных портах. 
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+
 ### Объём перевалки угля в российских морских портах, млн т
 
-![](../fig/2024-08-Coal-Map.svg){width="100%"}
+![](../fig/2025-02-Coal-Map.SVG){width="100%"}
 
 ### События
 
