--- a/markets/markets-sea-container-ports.qmd
+++ b/markets/markets-sea-container-ports.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Перевалка. Контейнеры"
+title: "Морские порты. Контейнеры"
 sidebar: false
 format: 
   html:
@@ -13,9 +13,19 @@ format:
 
 ![](../images/icon-subscription.svg)[Демоподписка](../demo-subscription.qmd)
 
-:::::: {.grid style="margin-left:0%"}
+::: {.grid style="margin-left:0%"}
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
+
+*15.08.2025*
+
+**Увеличение ставок перевалки: порты Юга и Балтики в авангарде изменений**
+
+-   Контейнерооборот российских портов за 7 мес. 2025 г. снизился на 2,6% г/г до 3,1 млн ДФЭ. Позитивная динамика перевалки контейнеров в годовом выражении достигнута в Балтийском и Азово-Черноморском бассейнах, негативная — в Дальневосточном и Арктическом.
+-   По итогам 7 мес. 2025 г. Большой порт Санкт-Петербург и Владивосток сравнялись по объёмам перевалки контейнеров.
+-   За последние полгода российские терминалы проиндексировали тарифы на перевалку гружёных контейнеров в среднем на 6% (в рублях), при этом рост тарифов в долларовом эквиваленте составил в среднем 20-30%. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *17.02.2025*
 
@@ -25,27 +35,23 @@ format:
 -   По итогам 2024 г. порты Дальневосточного (2,69 млн ДФЭ, +4,6% г/г), Азово-Черноморского (1,07 млн ДФЭ, +6,5% г/г) и Арктического (0,19 млн ДФЭ, +17,7% г/г) бассейнов обновили исторические рекорды по контейнерообороту.
 -   Самые высокие ставки на перевалку гружёных контейнеров сохраняются в порту Новороссийска, а их наибольший рост ко 2 пол. 2024 г. фиксируется в порту Владивостока.
 
-*16.09.2024*
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*16.09.2025*
 
 **Конкуренция и торговые дисбалансы определяют ставки перевалки контейнеров в портах**
 
 -   Контейнерооборот российских портов за 7 мес. 2024 г. вырос на 13,6 % г/г до 3,2 млн ДФЭ. Позитивная динамика перевалки контейнеров в годовом выражении достигнута во всех бассейнах, кроме Каспийского.
 -   Стивидор ВМТП (порт Владивосток) остается крупнейшим российским контейнерным терминалом по показателям работы, НУТЭП (порт Новороссийск) вытеснил со второго места ВСК (порт Восточный).
--   Тарифы терминалов Дальнего Востока на перевалку контейнеров в экспортном сообщении до 30% ниже, чем в импортном из-за значительного превышения импортного потока.
+-   Самые высокие ставки на перевалку гружёных контейнеров сохраняются в порту Новороссийска, а их наибольший рост ко 2 пол. 2024 г. фиксируется в порту Владивостока.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-### Объём перевалки контейнеров по бассейнам за 12 мес. 2024 г., тыс. ДФЭ
+### Объём перевалки контейнеров по бассейнам за 7 мес. 2025 г., тыс. ДФЭ
 
-![](../fig/2025-02-Container-Map-Final.svg){width="100%"}
-
-### События
-
-*7 февраля 2025. Пятница с Центром ценовых индексов. Логистика*
-
-[Материалы →](../events/2025-02-07-logistics.qmd)
+![](../fig/2025-08-Container-Map.SVG){width="100%"}
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -53,6 +59,6 @@ format:
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
 
-[Спецификация ставок сухопутной логистики](../methodology/specs-logistics.qmd)
+[Спецификация ставок перевалки](../methodology/specs-ports.qmd)
 :::
-::::::
+:::
