--- a/markets/markets-sea-oil-ports.qmd
+++ b/markets/markets-sea-oil-ports.qmd
@@ -16,15 +16,25 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*08.08.2025*
+
+**Тарифы на перевалку не спешат расти**
+
+- Объем экспортной перевалки в 1 пол. 2025 г. снизился на 4,4% пол./пол., что обусловлено новыми ограничениями на российскую нефтяную отрасль.
+
+- Ставки на перевалку российской нефти в портах АЧБ остались без изменений, в портах Балтики – показали незначительное снижение.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *30.01.2025*
 
 **Тарифы на перевалку растут вслед за экспортными объемами**
 
--   Ставки на перевалку нефти в 2025 г. выросли во всех основных портах на 5,8-9,9% г/г.
+- Ставки на перевалку нефти в 2025 г. выросли во всех основных портах на 5,8-9,9% г/г.
 
--   Рост внутренней переработки нефти снизил объем экспортной перевалки во 2 полугодии 2024 г. на \~6% пол./пол.
+- Рост внутренней переработки нефти снизил объем экспортной перевалки во 2 полугодии 2024 г. на ~6% пол./пол.
 
--   По итогам 2024 г. объем перевалки нефти вырос на 0,9% г/г.
+- По итогам 2024 г. объем перевалки нефти вырос на 0,9% г/г.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -32,11 +42,11 @@ format:
 
 **Ставки на перевалку синхронно выросли**
 
--   Ставки на перевалку нефти выросли во всех основных портах на 7,2-7,5% г/г.
+- Ставки на перевалку нефти выросли во всех основных портах на 7,2-7,5% г/г.
 
--   Несмотря на ограничения в отношении танкерного флота, объем перевалки российской нефти в 1 полугодии 2024 г. сохранился на уровне аналогичного периода прошлого года.
+- Несмотря на ограничения в отношении танкерного флота, объем перевалки российской нефти в 1 полугодии 2024 г. сохранился на уровне аналогичного периода прошлого года.
 
--   Снижения экспорта сорта Sokol было компенсировано увеличением ESPO.
+- Снижения экспорта сорта Sokol было компенсировано увеличением ESPO.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
@@ -44,7 +54,7 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Объём экспортной перевалки российской нефти в основных портах, млн т
 
-![](../fig/2024-12-Oil-Map.svg){width="100%"}
+![](../fig/2025-01-Oil-Map.SVG){width="100%"}
 
 ### Аналитика
 
