--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,18 +17,29 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*18.08.2025 Пшеница*
+
+**Зерновые площади в минусе**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели.
+
+Посевные площади под пшеницей в России снизились на 1,6 млн га до 26,9 млн га в 2025 г. 
+
+USDA снизило прогноз производства пшеницы в мире в 2025/26 г. на 1,7 млн т до 806,9 млн т из-за снижения прогнозов урожая в Китае.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *11.08.2025 Пшеница*
 
 **Экспортные пошлины на зерновые на нуле**
 
-Экспортные цены на пшеницу снизились на 2 долл. по сравнению с прошлой неделей. 
+Экспортные цены на пшеницу снизились на 2 долл. по сравнению с прошлой неделей.
 
-С 13 по 19 августа 2025 г. экспортные пошлины на пшеницу, ячмень и кукурузу в России будут нулевыми. 
+С 13 по 19 августа 2025 г. экспортные пошлины на пшеницу, ячмень и кукурузу в России будут нулевыми.
 
-Минсельхоз Франции повысил прогноз урожая мягкой пшеницы в стране на 500 тыс. т до 33,1 млн т в 2025 г. 
+Минсельхоз Франции повысил прогноз урожая мягкой пшеницы в стране на 500 тыс. т до 33,1 млн т в 2025 г.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *04.08.2025 Пшеница*
 
@@ -63,18 +74,6 @@ format:
 Экспортная пошлина на пшеницу в России третью неделю остается нулевой.
 
 Бангладеш обещает импортировать из США 700 тыс. т пшеницы ежегодно в надежде на снижение 35% пошлин на бангладешские товары.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*07.07.2025 Пшеница*
-
-**Экспортная пошлина на пшеницу упала до нуля**
-
-Экспортные цены на пшеницу остались на уровне прошлой недели.
-
-Экспортная пошлина на пшеницу в России снизилась до нуля впервые с момента введения в 2021 г.
-
-Аргентина вернула экспортную пошлину на пшеницу к январскому уровню, повысив с 9,5% до 12%.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
