--- a/markets/markets-sea-oil-products-ports.qmd
+++ b/markets/markets-sea-oil-products-ports.qmd
@@ -16,15 +16,28 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*08.08.2025*
+
+**Падение экспорта в Черном море тянет ставки перевалки за собой**
+
+- Тарифы на перевалку российских нефтепродуктов в 1 пол. 2025 г. заметнее всего увеличились в портах Дальнего Востока. Диапазон роста для светлых нефтепродуктов составляет от 16
+19% пол./пол., для темных нефтепродуктов – верхняя граница составляет 12% пол./пол.
+
+- Снижение отгрузок нефтепродуктов в портах АЧБ на 11% пол./пол. обусловило падение стоимости перевалки в порту Тамань 8,4% пол./пол. для всех видов нефтепродуктов.
+
+- Экспортная перевалка российских нефтепродуктов в портах в 1 пол. 2025 г. выросла на 11% (пол./пол.).
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *06.02.2025*
 
 **Ставки перевалки нефтепродуктов выросли вопреки снижению экспорта**
 
--   Тарифы на перевалку нефтепродуктов в российских портах во 2 полугодии 2024 г. выросли в среднем на 12% (пол./пол.)
+- Тарифы на перевалку нефтепродуктов в российских портах во 2 полугодии 2024 г. выросли в среднем на 12% (пол./пол.)
 
--   Наиболее заметное увеличение произошло в Азово-Черноморском бассейне, где верхняя граница повышения ставок составила 41,4 %.
+- Наиболее заметное увеличение произошло в Азово-Черноморском бассейне, где верхняя граница повышения ставок составила 41,4 %.
 
--   Экспортная перевалка российских нефтепродуктов в портах во 2 полугодии 2024 г. упала на 6,5% (пол./пол.).
+- Экспортная перевалка российских нефтепродуктов в портах во 2 полугодии 2024 г. упала на 6,5% (пол./пол.).
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -32,19 +45,21 @@ format:
 
 **Несмотря на снижение экспорта, перевалка нефтепродуктов росла**
 
--   Ставки перевалки нефтепродуктов в российских портах выросли в среднем на 7-9% (г/г).
+- Ставки перевалки нефтепродуктов в российских портах выросли в среднем на 7-9% (г/г).
 
--   Наиболее заметное увеличение произошло в Балтийском бассейне, где верхняя граница ставок составила 38,5 %.
+- Наиболее заметное увеличение произошло в Балтийском бассейне, где верхняя граница ставок составила 38,5 %.
 
--   Экспортная перевалка российских нефтепродуктов в портах в 1 полугодии 2024 г. упала на 22% (г/г).
+- Экспортная перевалка российских нефтепродуктов в портах в 1 полугодии 2024 г. упала на 22% (г/г).
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+
 ### Объём экспортной перевалки российских нефтепродуктов в основных портах, млн т
 
-![](../fig/2024-12-Oil-products-Map.svg){width="100%"}
+![](../fig/2025-01-Oil-products-Map.SVG){width="100%"}
 
 ### Аналитика
 
