--- a/markets/markets-sea-wheat-ports.qmd
+++ b/markets/markets-sea-wheat-ports.qmd
@@ -17,15 +17,27 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*01.08.2025*
+
+**Низкий экспорт сохранил ставки перевалки**
+
+- Ставки на перевалку зерновых в июле 2025 г. в основных портах сохранились на уровне начала 2025 г. Перевалка зерновых портами России в первом полугодии 2025 года составила 14,1 млн т (-55% г/г).
+
+- Новороссийск остаётся лидером по отгрузкам зерна на экспорт среди всех портов России. Объём перевалки составил 5,9 млн т (-55% г/г). Средневзвешенная ставка здесь достигает 1867 руб./т.
+
+- Вне Азово-Черноморского бассейна крупнейшими портами по перевалке зерновых являются: Астрахань — 323 тыс. т (-67% г/г), Высоцк — 453 тыс. т (-12% г/г). Ставки на перевалку в этих портах на 42% ниже, чем в Новороссийске.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *01.02.2025*
 
 **Новый календарный год не принес изменений тарифов**
 
--   Ставки на перевалку зерновых в феврале 2025 г. сохранились на уровне начала сельскохозяйственного года 2024/2025. Перевалка зерновых портами России во втором полугодии 2024 г. составила 31,9 млн т (+6% г/г).
+- Ставки на перевалку зерновых в феврале 2025 г. сохранились на уровне начала сельскохозяйственного года 2024/2025. Перевалка зерновых портами России во втором полугодии 2024 г. составила 31,9 млн т (+6% г/г).
 
--   Новороссийск остается лидером по отгрузке зерна на экспорт среди всех портов России. Объем перевалки составил 26,5 млн т (+16% г/г). Средневзвешенная ставка здесь достигает 1867 руб./т.
+- Новороссийск остается лидером по отгрузке зерна на экспорт среди всех портов России. Объем перевалки составил 26,5 млн т (+16% г/г). Средневзвешенная ставка здесь достигает 1867 руб./т.
 
--   Вне Азово-Черноморского бассейна крупнейшими портами по перевалке зерновых являются: Астрахань — 1,5 млн т (-8% г/г); Высоцк — 1 млн т (+72% г/г). Ставки на перевалку в этих портах на 42% ниже, чем в Новороссийске.
+- Вне Азово-Черноморского бассейна крупнейшими портами по перевалке зерновых являются: Астрахань — 1,5 млн т (-8% г/г); Высоцк — 1 млн т (+72% г/г). Ставки на перевалку в этих портах на 42% ниже, чем в Новороссийске.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -33,19 +45,21 @@ format:
 
 **Лидер в погрузке – лидер в цене**
 
--   Ставки на перевалку зерна в Азово-Черноморском бассейне выросли на 10-30% по сравнению с прошлым сельскохозяйственным сезоном. Объем отгрузок зерна через АЧБ за первые полгода вырос на 3,6 млн т (+15% г/г).
+- Ставки на перевалку зерна в Азово-Черноморском бассейне выросли на 10-30% по сравнению с прошлым сельскохозяйственным сезоном. Объем отгрузок зерна через АЧБ за первые полгода вырос на 3,6 млн т (+15% г/г). 
 
--   Новороссийск остается лидером по отгрузке зерна на экспорт среди всех портов России. Средневзвешенная ставка за первую половину 2024 г. составила 1867 руб. Объем поставок составил 13,2 млн т зерна (+17% г/г).
+- Новороссийск остается лидером по отгрузке зерна на экспорт среди всех портов России. Средневзвешенная ставка за первую половину 2024 г. составила 1867 руб. Объем поставок составил 13,2 млн т зерна (+17% г/г).
 
--   Порт Высоцк стал лидером перевалки зерна в Балтийском бассейне во 2-м квартале 2024 г. Объем переваленного зерна во 2-м квартале 2024 г. составил 360 тыс. т (+127% кв/кв), 65% от общего экспорта из портов Балтики.
+- Порт Высоцк стал лидером перевалки зерна в Балтийском бассейне во 2-м квартале 2024 г. Объем переваленного зерна во 2-м квартале 2024 г. составил 360 тыс. т (+127% кв/кв), 65% от общего экспорта из портов Балтики.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+
 ### Объём перевалки зерновых в российских морских портах, млн т
 
-![](../fig/2024-08-Wheat-Map.SVG){width="100%"}
+![](../fig/2025-02-Wheat-Map.SVG){width="100%"}
 
 ### События
 
